crates/llvmkit-ir/tests/compile_fail/position_at_end_sealed_block.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/position_at_end_sealed_block.rs:22:58
   |
22 |     let _ = IRBuilder::new_for::<()>(&m).position_at_end(sealed_bb);
   |                                          --------------- ^^^^^^^^^ expected `BasicBlock<'_, ()>`, found `BasicBlock<'_, (), Sealed>`
   |                                          |
   |                                          arguments to this method are incorrect
   |
   = note: expected struct `llvmkit_ir::BasicBlock<'_, (), Unsealed>`
              found struct `llvmkit_ir::BasicBlock<'_, (), Sealed>`
note: method defined here
  --> src/ir_builder.rs
   |
   |     pub fn position_at_end(self, bb: BasicBlock<'ctx, R>) -> IRBuilder<'ctx, F, Positioned, R> {
   |            ^^^^^^^^^^^^^^^
